fix: navbar responsive spacing

--- a/src/app/shared/navbar/navbar.scss
+++ b/src/app/shared/navbar/navbar.scss
@@ -23,6 +23,9 @@
 	display: flex;
 	justify-content: center;
 	margin-bottom: 200px;
+	@include respond-max($break-xl) {
+		margin-bottom: 150px;
+	}
 
 	& .logo {
 		object-fit: contain;
